# ML-Dobot-Projects

./: .gitignore  README.md
Dobot-Vision-Cam/: check_cam.py  main.py  pyproject.toml
Dobot-Vision-Cam/mvimport/: MvCameraControl_class.py
Gesture-Control-Robot/: .env  .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
Gesture-Control-Robot/src/: __init__.py
Gesture-Control-Robot/src/models/: __init__.py  handtracking.py  robotcontroller.py
Voice-Controlled-Robot/: .env  .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
Voice-Controlled-Robot/src/: utils.py
Voice-Controlled-Robot/src/agent/: agent.py  functions.py  prompts.py
